--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://github.com/christianlMaldonado/ReactPortfolio",
+  "homepage": "https://christianlmaldonado.github.io/ReactPortfolio/",
+  // "homepage": "https://github.com/christianlMaldonado/ReactPortfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
